--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,12 +37,15 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
@@ -58,6 +61,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
+    "uploadthing": "^7.6.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
